Try making auto testing with test containers(in progress):
Fix launching tests